# scanseq-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bootstrap.ps1  bootstrap.py  bootstrap.sh  plan1.md  pyproject.toml  rustfmt.toml  test.py
.cargo/: config.toml
src/: lib.rs  main.rs
src/core/: mod.rs  scan.rs
src/core/file/: mod.rs  tests.rs
src/core/seq/: mod.rs  tests.rs
