[package]
name = "scanseq"
version = "0.1.7"
edition = "2021"
description = "File sequence detector in Rust with Python interface for automation systems"
license = "MIT"
repository = "https://github.com/ssoj13/scanseq-rs"
homepage = "https://github.com/ssoj13/scanseq-rs"
authors = ["Alex Khalyavin <joss13@gmail.com>",]
keywords = ["vfx", "sequence", "files", "animation", "frames"]
categories = ["filesystem", "multimedia"]

[lib]
name = "scanseq"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "scanseq-cli"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
glob = "0.3"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwalk = "0.8"
log = "0.4"
# CLI-only deps: kept optional so plain `rlib` consumers (exr-view, codec-core)
# don't pull an arg parser, progress UI, or a logger implementation.
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }
env_logger = { version = "0.11", optional = true }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
default = []
# `cli` enables the scanseq-cli binary (arg parsing, progress bar, logger init).
cli = ["dep:clap", "dep:indicatif", "dep:env_logger"]
python = ["pyo3"]

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = false
strip = true
codegen-units = 1
