[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "scanseq"
version = "0.1.0"
description = "High-performance file sequence detection"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "scanseq"
features = ["python"]
bindings = "pyo3"
